--- a/style.css
+++ b/style.css
@@ -1930,8 +1930,11 @@ box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.096);
 /* .carousel-pic {
   width: 400px;
 } */
+
 /* Team */
-@media screen and (max-width: 768px) {
+
+
+/* @media screen and (max-width: 768px) {
 .container {
 padding-left: 5em;
  }
@@ -1947,7 +1950,7 @@ padding-left: 5em;
  .card {
    margin-bottom: 2em;
  }
-}
+} */
 
 .team {
   padding-top: 3em;
