--- a/style.css
+++ b/style.css
@@ -1934,28 +1934,26 @@ box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.096);
 /* Team */
 
 
-/* @media screen and (max-width: 768px) {
-.container {
-padding-left: 5em;
- }
+@media screen and (max-width: 768px) {
+
  .card-title{
    text-align: center;
  }
  .card-text {
    text-align: center;
  }
- .btn {
+ /* .btn {
    margin-left: 3.7em;
- }
+ } */
  .card {
    margin-bottom: 2em;
  }
-} */
+}
 
 .team {
   padding-top: 3em;
   padding-bottom: 3em;
-  padding-left: 3em;
+  /* padding-left: 3em; */
 }
 
 .firstteam {
